--- a/prepros-6.config
+++ b/prepros-6.config
@@ -37,6 +37,7 @@
         "css/sections/_header.scss",
         "css/sections/_menu.scss",
         "css/sections/_controls.scss",
+        "css/sections/_callorder.scss",
         "css/sections/_main.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
