Главная+Каталог и горизонтальная прокрутка

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,10 +35,12 @@
         "css/layout/_hover-anim.scss",
         "css/layout/_common.scss",
         "css/sections/_header.scss",
+        "css/sections/_swiper.scss",
         "css/sections/_menu.scss",
         "css/sections/_controls.scss",
         "css/sections/_callorder.scss",
         "css/sections/_main.scss",
+        "css/sections/_catalog.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
