Добавил страницу конструктора

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,6 +41,7 @@
         "css/sections/_callorder.scss",
         "css/sections/_main.scss",
         "css/sections/_catalog.scss",
+        "css/sections/_constructor.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
