Добавил страницу контактов (пока без карты)

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,6 +42,7 @@
         "css/sections/_main.scss",
         "css/sections/_catalog.scss",
         "css/sections/_constructor.scss",
+        "css/sections/_contacts.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
