--- a/prepros-6.config
+++ b/prepros-6.config
@@ -36,6 +36,7 @@
         "css/layout/_common.scss",
         "css/sections/_header.scss",
         "css/sections/_swiper.scss",
+        "css/sections/_breadcrumbs.scss",
         "css/sections/_menu.scss",
         "css/sections/_controls.scss",
         "css/sections/_callorder.scss",
@@ -43,6 +44,8 @@
         "css/sections/_catalog.scss",
         "css/sections/_constructor.scss",
         "css/sections/_contacts.scss",
+        "css/sections/_products.scss",
+        "css/sections/_manufacturers.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
