--- a/prepros-6.config
+++ b/prepros-6.config
@@ -46,6 +46,7 @@
         "css/sections/_contacts.scss",
         "css/sections/_products.scss",
         "css/sections/_manufacturers.scss",
+        "css/sections/_manufacturer.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
