--- a/prepros-6.config
+++ b/prepros-6.config
@@ -47,6 +47,7 @@
         "css/sections/_products.scss",
         "css/sections/_manufacturers.scss",
         "css/sections/_manufacturer.scss",
+        "css/sections/_ingredients.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
