--- a/prepros-6.config
+++ b/prepros-6.config
@@ -48,6 +48,7 @@
         "css/sections/_manufacturers.scss",
         "css/sections/_manufacturer.scss",
         "css/sections/_ingredients.scss",
+        "css/sections/_product.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
