Актив верхнего уровня

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,6 +33,7 @@
         "css/layout/_smart-grid.scss",
         "css/layout/_adjustment.scss",
         "css/layout/_hover-anim.scss",
+        "css/layout/_sprite-controls.scss",
         "css/layout/_common.scss",
         "css/sections/_header.scss",
         "css/sections/_swiper.scss",
