Добавил внутренние страницы: Карьера, Новости, О нас, отзывы, Спецпредложения

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -50,6 +50,10 @@
         "css/sections/_manufacturer.scss",
         "css/sections/_ingredients.scss",
         "css/sections/_product.scss",
+        "css/sections/_career.scss",
+        "css/sections/_news.scss",
+        "css/sections/_about.scss",
+        "css/sections/_reviews.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
