--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.3.5",
     "browser-sync": "^2.23.3",
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
