--- a/prepros-6.config
+++ b/prepros-6.config
@@ -54,6 +54,7 @@
         "css/sections/_news.scss",
         "css/sections/_about.scss",
         "css/sections/_reviews.scss",
+        "css/sections/_faces.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
