Добавлено: 1.Наши лица - faces.html 2.Личный кабинет - cabinet.html

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -55,6 +55,7 @@
         "css/sections/_about.scss",
         "css/sections/_reviews.scss",
         "css/sections/_faces.scss",
+        "css/sections/_cabinet.scss",
         "css/sections/_footer.scss",
         "css/sections/_socials.scss"
       ]
